--- a/index.html
+++ b/index.html
@@ -53,7 +53,16 @@
       <!-- form start -->
       <form action="#">
         <div class="form-element">
-          <textarea name="" id="" cols="30" rows="10"></textarea>
+          <textarea name="" id="" cols="40" rows="20">
+            [
+              {name: "Tyrion Lannister",
+              birthday : "12/02/1978"},
+              {name: "Tyrion 2",
+              birthday : "12/03/1978"},
+              {name: "Tyrion 3",
+              birthday : "15/04/1978"}
+            ]
+          </textarea>
         </div>
         <div class="form-element">
           <label for="Year">Year</label>
