[html] added ul in calendar

--- a/index.html
+++ b/index.html
@@ -39,13 +39,36 @@
       <!-- Calendar start -->
       <div class="calendar">
         <ul>
-          <li>mon</li>
-          <li>tue</li>
-          <li>wed</li>
-          <li>thu</li>
-          <li>fri</li>
-          <li>sat</li>
-          <li>sun</li>
+          <li>
+            <h3> mon </h3>
+            <ul class="birthdays">
+              <li>1</li>
+            </ul>
+          </li>
+          <li>
+            <h3> tue </h3>
+            <ul class="birthdays"></ul>
+          </li>
+          <li>
+            <h3> wed </h3>
+            <ul class="birthdays"></ul>
+          </li>
+          <li>
+            <h3> thu </h3>
+            <ul class="birthdays"></ul>
+          </li>
+          <li>
+            <h3> fri </h3>
+            <ul class="birthdays"></ul>
+          </li>
+          <li>
+            <h3> sat </h3>
+            <ul class="birthdays"></ul>
+          </li>
+          <li>
+            <h3> sun </h3>
+            <ul class="birthdays"></ul>
+          </li>
         </ul>
       </div>
       <!-- Calendar end -->
