[html] wrapper class added

--- a/index.html
+++ b/index.html
@@ -38,61 +38,67 @@
 
       <!-- Calendar start -->
       <div class="calendar">
-        <ul>
-          <li>
-            <h3> mon </h3>
-            <ul class="birthdays">
-              <li>1</li>
-            </ul>
-          </li>
-          <li>
-            <h3> tue </h3>
-            <ul class="birthdays"></ul>
-          </li>
-          <li>
-            <h3> wed </h3>
-            <ul class="birthdays"></ul>
-          </li>
-          <li>
-            <h3> thu </h3>
-            <ul class="birthdays"></ul>
-          </li>
-          <li>
-            <h3> fri </h3>
-            <ul class="birthdays"></ul>
-          </li>
-          <li>
-            <h3> sat </h3>
-            <ul class="birthdays"></ul>
-          </li>
-          <li>
-            <h3> sun </h3>
-            <ul class="birthdays"></ul>
-          </li>
-        </ul>
+        <div class="wrapper">
+
+
+          <ul>
+            <li>
+              <h3> mon </h3>
+              <ul class="birthdays">
+                <li>1</li>
+              </ul>
+            </li>
+            <li>
+              <h3> tue </h3>
+              <ul class="birthdays"></ul>
+            </li>
+            <li>
+              <h3> wed </h3>
+              <ul class="birthdays"></ul>
+            </li>
+            <li>
+              <h3> thu </h3>
+              <ul class="birthdays"></ul>
+            </li>
+            <li>
+              <h3> fri </h3>
+              <ul class="birthdays"></ul>
+            </li>
+            <li>
+              <h3> sat </h3>
+              <ul class="birthdays"></ul>
+            </li>
+            <li>
+              <h3> sun </h3>
+              <ul class="birthdays"></ul>
+            </li>
+          </ul>
+        </div>
       </div>
       <!-- Calendar end -->
 
       <!-- form start -->
-      <form action="#">
-        <div class="form-element">
-          <textarea name="" id="" cols="40" rows="20">
-            [
+      <div class="wrapper">
+        <form action="#">
+          <div class="form-element">
+            <textarea name="" id="" cols="40" rows="20">
+              [
               {name: "Tyrion Lannister",
               birthday : "12/02/1978"},
               {name: "Tyrion 2",
               birthday : "12/03/1978"},
               {name: "Tyrion 3",
               birthday : "15/04/1978"}
-            ]
-          </textarea>
-        </div>
-        <div class="form-element">
-          <label for="Year">Year</label>
-          <input type="number" name="" id="">
-          <input type="submit" value="Update">
-        </div>
-      </form>
+              ]
+            </textarea>
+          </div>
+          <div class="form-element">
+            <label for="Year">Year</label>
+            <input type="number" name="" id="">
+            <input type="submit" value="Update">
+          </div>
+        </form>
+      </div>
       <!-- form end -->
     </main>
     <!--main section end-->
