--- a/index.html
+++ b/index.html
@@ -39,18 +39,16 @@
       <!-- Calendar start -->
       <div class="calendar">
         <div class="wrapper">
-
-
           <ul>
             <li>
               <h3> mon </h3>
               <ul class="birthdays">
-                <li>1</li>
               </ul>
             </li>
             <li>
               <h3> tue </h3>
-              <ul class="birthdays"></ul>
+              <ul class="birthdays">
+              </ul>
             </li>
             <li>
               <h3> wed </h3>
@@ -82,19 +80,11 @@
         <form action="#">
           <div class="form-element">
             <textarea name="" id="" cols="40" rows="20">
-              [
-              {name: "Tyrion Lannister",
-              birthday : "12/02/1978"},
-              {name: "Tyrion 2",
-              birthday : "12/03/1978"},
-              {name: "Tyrion 3",
-              birthday : "15/04/1978"}
-              ]
             </textarea>
           </div>
           <div class="form-element">
             <label for="Year">Year</label>
-            <input type="number" name="" id="">
+            <input type="number" name="" id="year" value="2021" min="1700" max="2100">
             <input type="submit" value="Update">
           </div>
         </form>
@@ -112,8 +102,9 @@
   </div>
   <!--container end-->
 
-  <!-- <script src="js/vendors/jquery-1.8.3.min.js"></script>
-<script src="assets/js/script.js"></script> -->
+  <!-- <script src="js/vendors/jquery-1.8.3.min.js"></script> -->
+  <script src="assets/vendor/moment.js"></script>
+  <script src="assets/js/script.js"></script>
 </body>
 
 </html>
