--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
   <!-- <script src="js/vendors/jquery-1.8.3.min.js"></script> -->
   <script src="assets/vendor/moment.js"></script>
-  <script src="assets/js/script.js"></script>
+  <script type="module" src="assets/js/script.js"></script>
 </body>
 
 </html>
