--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <!-- <link rel="stylesheet" media="screen" href="assets/vendor/font-awesome/css/all.min.css" > -->
 
   <!-- Default style-sheet is for 'media' type screen (color computer display).  -->
+  <link rel="stylesheet" media="screen" href="assets/css/reset.css">
   <link rel="stylesheet" media="screen" href="assets/css/style.css">
 
 </head>
