[html] added icon file

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             <li>
               <h3> mon </h3>
               <ul class="birthdays">
+                <li>AD</li>
+                <li class="small">AD</li>
+                <li class="small">AD</li>
               </ul>
             </li>
             <li>
