--- a/index.html
+++ b/index.html
@@ -44,33 +44,39 @@
             <li>
               <h3> mon </h3>
               <ul class="birthdays">
-
               </ul>
+              <p class="count"></p>
             </li>
             <li>
               <h3> tue </h3>
               <ul class="birthdays">
               </ul>
+              <p class="count"></p>
             </li>
             <li>
               <h3> wed </h3>
               <ul class="birthdays"></ul>
+              <p class="count"></p>
             </li>
             <li>
               <h3> thu </h3>
               <ul class="birthdays"></ul>
+              <p class="count"></p>
             </li>
             <li>
               <h3> fri </h3>
               <ul class="birthdays"></ul>
+              <p class="count"></p>
             </li>
             <li>
               <h3> sat </h3>
               <ul class="birthdays"></ul>
+              <p class="count"></p>
             </li>
             <li>
               <h3> sun </h3>
               <ul class="birthdays"></ul>
+              <p class="count"></p>
             </li>
           </ul>
         </div>
