--- a/index.html
+++ b/index.html
@@ -16,10 +16,6 @@
   <!-- Place favicon.ico in the root directory: mathiasbynens.be/notes/touch-icons -->
   <link rel="shortcut icon" href="favicon.ico" />
 
-  <!--font-awesome link for icons-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <!-- <link rel="stylesheet" media="screen" href="assets/vendor/font-awesome/css/all.min.css" > -->
-
   <!-- Default style-sheet is for 'media' type screen (color computer display).  -->
   <link rel="stylesheet" media="screen" href="assets/css/reset.css">
   <link rel="stylesheet" media="screen" href="assets/css/style.css">
@@ -34,6 +30,7 @@
       <h1>Birthday Cal</h1>
     </header>
     <!--header section start-->
+
     <!--main section start-->
     <main>
 
@@ -89,10 +86,11 @@
           <div class="form-element">
             <textarea name="" id="" cols="40" rows="20">
             </textarea>
+            <span class="error"></span>
           </div>
           <div class="form-element">
             <label for="Year">Year</label>
-            <input type="number" name="" id="year" value="2021" min="1700" max="2100">
+            <input type="number" name="" id="year" value="2021" min="1700" max="3000">
             <input type="submit" value="Update">
           </div>
         </form>
@@ -101,16 +99,9 @@
     </main>
     <!--main section end-->
 
-    <!--footer section start-->
-    <footer>
-
-    </footer>
-    <!--footer section end-->
-
   </div>
   <!--container end-->
 
-  <!-- <script src="js/vendors/jquery-1.8.3.min.js"></script> -->
   <script src="assets/vendor/moment.js"></script>
   <script type="module" src="assets/js/script.js"></script>
 </body>
